--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   font-family: "burtons";
   src: url("./Burtons.otf");
+  overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif, burtons;
